--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
         run: bash setup.sh
         env:
           CI: "true"
+          GH_TOKEN: ${{ github.token }}
 
       - name: Install bats
         run: sudo apt-get install -y -qq bats
