--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         run: bash setup.sh
         env:
           CI: "true"
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.TRUSTED_SHARED_SOURCE_GITHUB_TOKEN }}
 
       - name: Install bats
         run: sudo apt-get install -y -qq bats
@@ -36,3 +36,5 @@ jobs:
           export PATH="$HOME/.local/bin:$PATH"
           eval "$(mise activate bash)"
           bats test/setup_test.bats
+        env:
+          GH_TOKEN: ${{ secrets.TRUSTED_SHARED_SOURCE_GITHUB_TOKEN }}
