--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Run shellcheck
-        run: shellcheck -x setup.sh lib/migrate.sh
+        run: shellcheck -x setup.sh lib/*.sh
 
   setup-ubuntu:
     name: Setup (Ubuntu)
