Add op/circleci auth, Node+Yarn via mise, and private registry config
- Authenticate with 1Password (op whoami / op signin) after installation
- Install and authenticate CircleCI CLI (circleci setup / CIRCLECI_CLI_TOKEN)
- Install Node.js (LTS via mise) and Yarn (via corepack) as baseline tools
- Add gh auth scopes (read:packages, write:packages) for GitHub Packages
- Configure Bundler (contribsys, GitHub Packages, GitHub git sources)
- Configure Yarn (@trusted via GitHub Packages, @fortawesome via Font Awesome)
- Add ci/mock-op shim so op commands succeed in CI without a real session
- Add doctor checks for circleci, Node, Yarn, and all registry configs
- Update AGENTS.md scope to reflect Node.js, Yarn, circleci, and registries

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Run shellcheck
-        run: shellcheck -x setup.sh doctor.sh lib/*.sh
+        run: shellcheck -x setup.sh doctor.sh lib/*.sh ci/mock-op
 
   setup-ubuntu:
     name: Setup (Ubuntu)
@@ -22,10 +22,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install op mock for CI
+        run: |
+          sudo cp ci/mock-op /usr/local/bin/op
+          sudo chmod +x /usr/local/bin/op
+
       - name: Run setup.sh
         run: bash setup.sh
         env:
           GH_TOKEN: ${{ secrets.TRUSTED_SHARED_SOURCE_GITHUB_TOKEN }}
+          CIRCLECI_CLI_TOKEN: ${{ secrets.TRUSTED_SHARED_SOURCE_CIRCLECI_TOKEN }}
 
       - name: Run doctor
         run: |
@@ -34,3 +40,4 @@ jobs:
           bash doctor.sh
         env:
           GH_TOKEN: ${{ secrets.TRUSTED_SHARED_SOURCE_GITHUB_TOKEN }}
+          CIRCLECI_CLI_TOKEN: ${{ secrets.TRUSTED_SHARED_SOURCE_CIRCLECI_TOKEN }}
