--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Run shellcheck
-        run: shellcheck -x setup.sh doctor.sh lib/*.sh ci/mock-op
+        run: shellcheck -x setup.sh doctor.sh lib/*.sh migrations/*.sh ci/mock-op
 
   setup-ubuntu:
     name: Setup (Ubuntu)
